<resources>
    <string name="app_name">NapptilusChallenge</string>
    <string name="server_error">Server Error</string>
    <string name="title_home">Workers</string>
    <string name="description_img_photo">workerImg</string>
    <string name="gender">Gender</string>
    <string name="profession">Profession</string>
    <string name="filter">Filter</string>

    <string name="worker_age">Age: %d</string>
    <string name="worker_height">Height: %d</string>
    <string name="worker_profession">Profession: %s</string>
    <string name="worker_gender">Gender: %s</string>
    <string name="worker_country">Country: %s</string>

    <string-array name="genderList">
        <item>F</item>
        <item>M</item>
    </string-array>

    <string-array name="professionList">
        <item>Developer</item>
        <item>Metalworker</item>
        <item>Gemcutter</item>
        <item>Medic</item>
        <item>Brewer</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender_dropdown">Gender Dropdown</string>


</resources>