<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".detailModel.DetailFragment"
    android:background="@color/white"
    >
    <data>
        <variable
            name="worker"
            type="com.example.napptiluschallenge.detailModel.viewModel.DetailViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintHorizontal_bias="0.0"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/workerImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_image"
            tools:src="@drawable/ic_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Prueba de nombre"
            android:text="@{worker.result.first_name}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvLastName"
            app:layout_constraintTop_toBottomOf="@id/workerImage"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            tools:text="Nunan"
            android:text="@{worker.result.last_name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvFirstName"
            app:layout_constraintTop_toBottomOf="@id/workerImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:text="snunan4@visualengin.com"
            android:text="@{worker.result.email}"
            android:paddingHorizontal="@dimen/padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFirstName"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:textAppearance="?attr/textAppearanceBody2"
            android:text="@{worker.result.description}"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"
            android:paddingHorizontal="@dimen/padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:text="@{worker.result.profession}"
            tools:text="Profession: Medic"
            android:textAppearance="?attr/textAppearanceBody1"
            android:paddingHorizontal="@dimen/padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@{worker.result.country}"
            tools:text="Country: Loompalandia"
            android:paddingHorizontal="@dimen/padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProfession"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@{worker.result.age}"
            tools:text="Age: 23"
            android:paddingHorizontal="@dimen/padding_default"
            app:layout_constraintEnd_toStartOf="@id/tvGender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCountry"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@{worker.result.gender}"
            tools:text="Gender: F"
            android:paddingHorizontal="@dimen/padding_default"
            app:layout_constraintEnd_toStartOf="@id/tvHeight"
            app:layout_constraintStart_toEndOf="@id/tvAge"
            app:layout_constraintTop_toBottomOf="@id/tvCountry"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@{worker.result.height}"
            tools:text="Height: 95"
            android:paddingHorizontal="@dimen/padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvGender"
            app:layout_constraintTop_toBottomOf="@id/tvCountry"
            />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:layout_marginTop="@dimen/padding_default"
                android:paddingHorizontal="@dimen/padding_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAge"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"

                />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</layout>